fix brevo form on mobile

--- a/styles.css
+++ b/styles.css
@@ -261,6 +261,16 @@ a {
 }
 
 /* start Brevo form styles */
+.brevo-email-form {
+    display: flex;
+    align-items: center;
+}
+@media (max-width: 768px) {
+    .brevo-email-form {
+        flex-direction: column;
+        gap: 0.5rem;
+    }
+}
 #sib-form-container {
     display: grid !important;
     justify-items: center !important;
